<resources>
    <string name="app_name">Comandit Atendente</string>
    <string name="title_comanda">Comandas</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="comandit_api_url">http://workstation:3311/comandit/api/</string>
    <string name="table_image_icon">Ícone da mesa</string>
    <string name="menu_icon_image">Ícone do menu</string>
    <string name="numero_comanda">999</string>
    <string name="mesaComanda">99</string>
    <string name="itemNumeroMesa">99</string>
    <string name="shoppingcart">shoppingCart</string>
    <string name="itemQtdPedidos">23:59</string>
    <string name="filtrar_comandas">Filtrar comandas</string>
    <string name="api_exception">Erro interno da API</string>

    <array name="comandaFilters">
        <item>Todas</item>
        <item>Abertas</item>
        <item>Fechadas</item>
        <item>Por mesa</item>
    </array>

    <array name="comandaManagement">
        <item>Mudar mesa</item>
        <item>Ver senha de acesso</item>
        <item>Compartilhar senha de acesso</item>
        <item>Gerar QR Code de acesso do cliente</item>
    </array>

    <!-- Gerenciamento de Comandas -->
    <string name="menu_comanda">Filtrar comandas</string>
    <string name="comanda_gerenciar_item_cupom_fiscal">Ver cupom não fiscal</string>
    <string name="comanda_gerenciar_sam">Senha de acesso mobile: %s</string>
    <string name="comanda_gerenciar_fechar_comanda">Fechar comanda</string>
    <string name="comanda_share_sam_title">Escolha a forma de envio</string>
    <string name="comanda_share_sam_subject">Comandit | Senha de acesso mobile | Comanda %d</string>
    <string name="troca_mesa_sucesso">Mesa alterada com sucesso</string>

    <!-- Dialogs -->
    <string name="title_dialog_comanda_gerenciar">Gerenciar Comanda %d</string>
    <string name="title_dialog_comanda_selecionar_mesa">Selecionar Mesa</string>
    <string name="title_dialog_comanda_sam_qrcode">QR Code de Acesso do Cliente</string>
    <string name="message_dialog_comanda_sam_qrcode">Comanda %d</string>
    <string name="title_dialog_pedido_cadastrar">Cadastrar Pedido</string>
    <string name="title_dialog_pedido_gerenciar">Gerenciar Pedido</string>
    <string name="title_dialog_pedido_cancelar">Cancelar Pedido</string>
    <string name="title_dialog_pedido_transferir">Transferir Pedido</string>

    <!-- Cupom Fiscal -->
    <string name="title_activity_cupom_fiscal">Cupom Não Fiscal</string>
    <string name="cf_pdf_file_name">Cupom Não Fiscal - Comanda %d</string>
    <string name="cf_share_no_sdk_support">Operação permitida somente para dispositivos com Android 4.4 (KitKat) ou superior.</string>

    <!-- Gerenciamento de Pedidos -->
    <string name="produto_desc_pedido_dialog">%d - %s</string>
    <string name="txvDialogQtd">Quantidade</string>
    <string name="txvDialogObs">Observação</string>

    <!-- Dialog Buttons -->
    <string name="btnOK">OK</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnTransferir">Transferir</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnSim">Sim</string>
    <string name="btnNao">Não</string>

    <!-- Geral -->
    <string name="msgError">Ocorreu um erro durante a operação.\nVerifique o status da conexão Wi-Fi do dispositivo.\nSe o problema persistir, contate o administrador do sistema.</string>
    <string name="msgErrorConfig">Ocorreu um erro ao recuperar um valor de configuração.\nContate o administrador do sistema.</string>
    <string name="msgWifiDeactivated">A conexão Wi-Fi deve estar ativada para iniciar o aplicativo.</string>
    <string name="loading">Processando</string>

    <!-- Login -->
    <string name="msgEmptyPassword">Informe a senha</string>
    <string name="msgInvalidPassword">A senha informada é inválida.</string>

    <!-- Gerenciamento de Comandas -->
    <string name="msgComandaFechada">Comanda fechada</string>
    <string name="msgConfirmFecharComanda">Confirma o fechamento da comanda</string>
    <string name="msgQuantidadeComandas">Comandas encontradas: %d</string>
    <string name="msgEmptyListComandas">Nenhuma comanda encontrada</string>
    <string name="msgSelecionarMesa">Selecione uma mesa</string>
    <string name="msgSelecionarMesaDestino">Selecione a mesa de destino</string>
    <string name="msgMesaSelecionada">Mesa selecionada: %d</string>
    <string name="msgErroQRCode">Ocorreu um erro ao gerar o QR Code.</string>

    <!-- Gerenciamento de Pedidos -->
    <string name="msgSelecionarComanda">Selecione uma comanda</string>
    <string name="msgSelecionarCategoriaProduto">Selecione uma categoria de produto</string>
    <string name="msgSemProdutosCategoria">Não há produtos nessa categoria.</string>
    <string name="pedidos_comanda_title">Pedidos - %d</string>
    <string name="msgPedidoMensagemRetornoSucesso">Pedido %s com sucesso</string>
    <string name="msgQuantidadePedidos">Pedidos encontrados: %d</string>
    <string name="msgEmptyListPedidos">Nenhum pedido encontrado</string>
    <string name="msgConfirmCancelPedido">Confirma o cancelamento do pedido?</string>
    <string name="msgComandaDestinoTransferencia">Selecione a comanda de destino do pedido</string>
    <string name="msgPedidoComandaSelecionadaDifere">A comanda do pedido difere da comanda selecionada.</string>
    <string name="msgPedidoSemHistorico">Não é possível transferir um pedido sem histórico.</string>
    <string name="msgPedidoComandasIguaisSelecionadas">Selecione uma comanda diferente da comanda de origem do pedido.</string>
    <string name="produtoIndisponivel">Indisponível</string>
    <string name="msgProdutoIndisponivel">Produto indisponível</string>
    <string name="sinal_menos">-</string>
    <string name="sinal_mais">+</string>
    <string name="quantidade_inicial">1</string>
    <string name="rlNomeProduto">Nome Produto</string>
    <string name="rlCodigoProduto">Código do Produto</string>
    <string name="rlPedidoQtdProduto">Qtde pedido</string>
    <string name="rlPedidoObservacao">Observação pedido</string>
    <string name="rlPrecoProduto">Preço Produto</string>
    <string name="consultar_pedidos">Consultar pedidos da comanda</string>
    <string name="carregando_configuracao">Carregando configurações</string>
    <string name="carregando_comandas_mesa">Carregando comandas da mesa</string>
    <string name="erro_formatacao_cupom_fiscal">Erro na formatação do cupom fiscal.</string>
    <string name="notification_title">Comanda chamando!</string>
    <string name="fechamento_escolha_forma_pagamento">Escolha a forma de pagamento</string>
    <string name="pagamento_registrado">Pagamento registrado com sucesso</string>
    <string name="chamado_cancelado">Chamado da comanda %d cancelado</string>
    <string name="notification_channel_description">Canal de notificações Comandit Atendente</string>
    <string name="notification_channel_id">ComanditAtendenteNC</string>

</resources>