<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/rlPedidoNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_marginTop="@dimen/recycler_item_margin_top"
        android:text="@string/rlNomeProduto"
        android:textSize="@dimen/nome_produto_pedido_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rlPedidoCodigoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlPedidoNomeProduto"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:text="@string/rlCodigoProduto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rlPedidoQtdProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rlPedidoCodigoProduto"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/rlPedidoNomeProduto"
        android:layout_marginEnd="@dimen/item_margin_start_end"
        android:text="@string/rlPedidoQtdProduto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rlPedidoObservacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_below="@+id/rlPedidoCodigoProduto"
        android:layout_marginEnd="@dimen/item_margin_start_end"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:text="@string/rlPedidoObservacao"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:visibility="visible" />

</RelativeLayout>