<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/rlNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_marginTop="@dimen/recycler_item_margin_top"
        android:text="@string/rlNomeProduto"
        android:textSize="@dimen/nome_produto_pedido_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rlCodigoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlNomeProduto"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:text="@string/rlCodigoProduto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rlPrecoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rlCodigoProduto"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/rlNomeProduto"
        android:layout_marginEnd="@dimen/item_margin_start_end"
        android:text="@string/rlPrecoProduto"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rlProdutoDisponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/item_margin_start_end"
        android:layout_below="@+id/rlCodigoProduto"
        android:layout_marginEnd="@dimen/item_margin_start_end"
        android:layout_marginBottom="@dimen/recycler_item_margin_bottom"
        android:text="@string/produtoIndisponivel"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic|bold"
        android:textColor="@color/produtoIndisponivel"
        android:visibility="gone" />

</RelativeLayout>